[gd_scene load_steps=12 format=4 uid="uid://5thd0dp6i7go"]

[ext_resource type="Script" uid="uid://clkaglfov6iqr" path="res://scenes/game.gd" id="1_iywne"]
[ext_resource type="Texture2D" uid="uid://dchf42ku1ohfu" path="res://assets/tiles_packed.png" id="1_yqjtg"]
[ext_resource type="Script" uid="uid://6a6j4ml2bv4m" path="res://scenes/parallax_background.gd" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://d066l7ur0uol0" path="res://scenes/player.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://cfuns8iiqrq5j" path="res://scenes/hud.tscn" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://dib7ifyy3j2il" path="res://scenes/enemy_1.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://bgpcdcucvcnhu" path="res://scenes/game_over.tscn" id="4_u5sy4"]
[ext_resource type="AudioStream" uid="uid://b2grrjk5p8ne6" path="res://sound/8Bit Adventure Loop.wav" id="8_gee14"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yqjtg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lbhrr"]
texture = ExtResource("1_yqjtg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0

[sub_resource type="TileSet" id="TileSet_iywne"]
sources/0 = SubResource("TileSetAtlasSource_lbhrr")

[node name="Game" type="Node2D"]
script = ExtResource("1_iywne")
enemies = Array[PackedScene]([ExtResource("4_lbhrr")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("3_p57ef")]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("4_u5sy4")]
visible = false

[node name="Player" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(231, 643)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_lbhrr")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 720)

[node name="TileMapLayer" type="TileMapLayer" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_yqjtg")
tile_map_data = PackedByteArray("AAAAAAAAAAACAAkAAAAAAAEAAAACAAkAAAAAAAIAAAACAAkAAAAAAAMAAAACAAkAAAAAAAQAAAACAAkAAAAAAAUAAAACAAkAAAAAAAYAAAACAAkAAAAAAAcAAAACAAkAAAAAAAgAAAACAAkAAAAAAAkAAAACAAkAAAAAAAoAAAACAAkAAAAAAAsAAAACAAkAAAAAAAwAAAACAAkAAAAAAA0AAAACAAkAAAAAAA4AAAACAAkAAAAAAA8AAAACAAkAAAAAABAAAAACAAkAAAAAABEAAAACAAkAAAAAABIAAAACAAkAAAAAABMAAAACAAkAAAAAABQAAAACAAkAAAAAABUAAAACAAkAAAAAABYAAAACAAkAAAAAABcAAAACAAkAAAAAABgAAAACAAkAAAAAABkAAAACAAkAAAAAABoAAAACAAkAAAAAABsAAAACAAkAAAAAABwAAAACAAkAAAAAAB0AAAACAAkAAAAAAB4AAAACAAkAAAAAAB8AAAACAAkAAAAAACAAAAACAAkAAAAAACEAAAACAAkAAAAAACIAAAACAAkAAAAAACMAAAACAAkAAAAAACQAAAACAAkAAAAAACUAAAACAAkAAAAAACYAAAACAAkAAAAAACcAAAACAAkAAAAAACgAAAACAAkAAAAAACkAAAACAAkAAAAAACoAAAACAAkAAAAAACsAAAACAAkAAAABAAAAAAACAAkAAAABAAEAAAACAAkAAAABAAIAAAACAAkAAAABAAMAAAACAAkAAAABAAQAAAACAAkAAAABAAUAAAACAAkAAAABAAYAAAACAAkAAAABAAcAAAACAAkAAAABAAgAAAACAAkAAAABAAkAAAACAAkAAAABAAoAAAAAAAUAAAABAAsAAAACAAkAAAABAAwAAAACAAkAAAABAA0AAAACAAkAAAABAA4AAAACAAkAAAABAA8AAAAAAAYAAAABABAAAAACAAkAAAABABEAAAACAAkAAAABABIAAAACAAkAAAABABMAAAACAAkAAAABABQAAAACAAkAAAABABUAAAACAAkAAAABABYAAAACAAkAAAABABcAAAACAAkAAAABABgAAAACAAkAAAABABkAAAACAAkAAAABABoAAAACAAkAAAABABsAAAACAAkAAAABABwAAAACAAkAAAABAB0AAAACAAkAAAABAB4AAAACAAkAAAABAB8AAAACAAkAAAABACAAAAACAAkAAAABACEAAAACAAkAAAABACIAAAACAAkAAAABACMAAAACAAkAAAABACQAAAACAAkAAAABACUAAAACAAkAAAABACYAAAACAAkAAAABACcAAAACAAkAAAABACgAAAACAAkAAAABACkAAAACAAkAAAABACoAAAACAAkAAAABACsAAAACAAkAAAACAAAAAAACAAkAAAACAAEAAAACAAkAAAACAAIAAAACAAkAAAACAAMAAAACAAkAAAACAAQAAAACAAkAAAACAAUAAAACAAkAAAACAAYAAAACAAkAAAACAAcAAAACAAkAAAACAAgAAAACAAkAAAACAAkAAAACAAkAAAACAAoAAAACAAkAAAACAAsAAAACAAkAAAACAAwAAAACAAkAAAACAA0AAAACAAkAAAACAA4AAAACAAkAAAACAA8AAAACAAkAAAACABAAAAACAAkAAAACABEAAAACAAkAAAACABIAAAACAAkAAAACABMAAAACAAkAAAACABQAAAACAAkAAAACABUAAAACAAkAAAACABYAAAACAAkAAAACABcAAAACAAkAAAACABgAAAACAAkAAAACABkAAAACAAkAAAACABoAAAACAAkAAAACABsAAAACAAkAAAACABwAAAACAAkAAAACAB0AAAACAAkAAAACAB4AAAAAAAUAAAACAB8AAAACAAkAAAACACAAAAACAAkAAAACACEAAAACAAkAAAACACIAAAACAAkAAAACACMAAAACAAkAAAACACQAAAACAAkAAAACACUAAAACAAkAAAACACYAAAACAAkAAAACACcAAAACAAkAAAACACgAAAACAAkAAAACACkAAAACAAkAAAACACoAAAACAAkAAAACACsAAAACAAkAAAADAAAAAAACAAkAAAADAAEAAAACAAkAAAADAAIAAAACAAkAAAADAAMAAAACAAkAAAADAAQAAAACAAkAAAADAAUAAAACAAkAAAADAAYAAAACAAkAAAADAAcAAAACAAkAAAADAAgAAAACAAkAAAADAAkAAAACAAkAAAADAAoAAAACAAkAAAADAAsAAAACAAkAAAADAAwAAAACAAkAAAADAA0AAAACAAkAAAADAA4AAAACAAkAAAADAA8AAAACAAkAAAADABAAAAACAAkAAAADABEAAAACAAkAAAADABIAAAACAAkAAAADABMAAAACAAkAAAADABQAAAACAAkAAAADABUAAAACAAkAAAADABYAAAACAAkAAAADABcAAAACAAkAAAADABgAAAACAAkAAAADABkAAAACAAkAAAADABoAAAACAAkAAAADABsAAAACAAkAAAADABwAAAACAAkAAAADAB0AAAACAAkAAAADAB4AAAACAAkAAAADAB8AAAACAAkAAAADACAAAAACAAkAAAADACEAAAACAAkAAAADACIAAAACAAkAAAADACMAAAACAAkAAAADACQAAAACAAkAAAADACUAAAACAAkAAAADACYAAAACAAkAAAADACcAAAACAAkAAAADACgAAAACAAkAAAADACkAAAACAAkAAAADACoAAAACAAkAAAADACsAAAACAAkAAAAEAAAAAAACAAkAAAAEAAEAAAACAAkAAAAEAAIAAAACAAkAAAAEAAMAAAACAAkAAAAEAAQAAAACAAkAAAAEAAUAAAACAAkAAAAEAAYAAAACAAkAAAAEAAcAAAACAAkAAAAEAAgAAAACAAkAAAAEAAkAAAACAAkAAAAEAAoAAAACAAkAAAAEAAsAAAACAAkAAAAEAAwAAAACAAkAAAAEAA0AAAACAAkAAAAEAA4AAAACAAkAAAAEAA8AAAACAAkAAAAEABAAAAACAAkAAAAEABEAAAACAAkAAAAEABIAAAAAAAQAAAAEABMAAAACAAkAAAAEABQAAAACAAkAAAAEABUAAAACAAkAAAAEABYAAAACAAkAAAAEABcAAAACAAkAAAAEABgAAAACAAkAAAAEABkAAAACAAkAAAAEABoAAAACAAkAAAAEABsAAAACAAkAAAAEABwAAAACAAkAAAAEAB0AAAACAAkAAAAEAB4AAAACAAkAAAAEAB8AAAACAAkAAAAEACAAAAACAAkAAAAEACEAAAACAAkAAAAEACIAAAACAAkAAAAEACMAAAACAAkAAAAEACQAAAACAAkAAAAEACUAAAACAAkAAAAEACYAAAACAAkAAAAEACcAAAACAAkAAAAEACgAAAACAAkAAAAEACkAAAACAAkAAAAEACoAAAACAAkAAAAEACsAAAACAAkAAAAFAAAAAAACAAkAAAAFAAEAAAACAAkAAAAFAAIAAAACAAkAAAAFAAMAAAACAAkAAAAFAAQAAAACAAkAAAAFAAUAAAACAAkAAAAFAAYAAAACAAkAAAAFAAcAAAACAAkAAAAFAAgAAAACAAkAAAAFAAkAAAACAAkAAAAFAAoAAAACAAkAAAAFAAsAAAACAAkAAAAFAAwAAAACAAkAAAAFAA0AAAACAAkAAAAFAA4AAAACAAkAAAAFAA8AAAACAAkAAAAFABAAAAACAAkAAAAFABEAAAACAAkAAAAFABIAAAACAAkAAAAFABMAAAACAAkAAAAFABQAAAACAAkAAAAFABUAAAACAAkAAAAFABYAAAACAAkAAAAFABcAAAACAAkAAAAFABgAAAACAAkAAAAFABkAAAACAAkAAAAFABoAAAACAAkAAAAFABsAAAACAAkAAAAFABwAAAACAAkAAAAFAB0AAAACAAkAAAAFAB4AAAACAAkAAAAFAB8AAAACAAkAAAAFACAAAAACAAkAAAAFACEAAAACAAkAAAAFACIAAAACAAkAAAAFACMAAAAAAAUAAAAFACQAAAACAAkAAAAFACUAAAACAAkAAAAFACYAAAACAAkAAAAFACcAAAACAAkAAAAFACgAAAACAAkAAAAFACkAAAACAAkAAAAFACoAAAACAAkAAAAFACsAAAACAAkAAAAGAAAAAAACAAkAAAAGAAEAAAACAAkAAAAGAAIAAAACAAkAAAAGAAMAAAACAAkAAAAGAAQAAAACAAkAAAAGAAUAAAACAAkAAAAGAAYAAAACAAkAAAAGAAcAAAACAAkAAAAGAAgAAAACAAkAAAAGAAkAAAACAAkAAAAGAAoAAAACAAkAAAAGAAsAAAACAAkAAAAGAAwAAAACAAkAAAAGAA0AAAACAAkAAAAGAA4AAAACAAkAAAAGAA8AAAACAAkAAAAGABAAAAACAAkAAAAGABEAAAACAAkAAAAGABIAAAACAAkAAAAGABMAAAACAAkAAAAGABQAAAACAAkAAAAGABUAAAACAAkAAAAGABYAAAACAAkAAAAGABcAAAACAAkAAAAGABgAAAACAAkAAAAGABkAAAACAAkAAAAGABoAAAACAAkAAAAGABsAAAACAAkAAAAGABwAAAACAAkAAAAGAB0AAAACAAkAAAAGAB4AAAACAAkAAAAGAB8AAAACAAkAAAAGACAAAAACAAkAAAAGACEAAAACAAkAAAAGACIAAAACAAkAAAAGACMAAAACAAkAAAAGACQAAAACAAkAAAAGACUAAAACAAkAAAAGACYAAAACAAkAAAAGACcAAAACAAkAAAAGACgAAAACAAkAAAAGACkAAAACAAkAAAAGACoAAAACAAkAAAAGACsAAAACAAkAAAAHAAAAAAACAAkAAAAHAAEAAAACAAkAAAAHAAIAAAACAAkAAAAHAAMAAAACAAkAAAAHAAQAAAACAAkAAAAHAAUAAAACAAkAAAAHAAYAAAACAAkAAAAHAAcAAAACAAkAAAAHAAgAAAACAAkAAAAHAAkAAAACAAkAAAAHAAoAAAACAAkAAAAHAAsAAAACAAkAAAAHAAwAAAACAAkAAAAHAA0AAAACAAkAAAAHAA4AAAACAAkAAAAHAA8AAAACAAkAAAAHABAAAAACAAkAAAAHABEAAAACAAkAAAAHABIAAAACAAkAAAAHABMAAAACAAkAAAAHABQAAAACAAkAAAAHABUAAAACAAkAAAAHABYAAAACAAkAAAAHABcAAAACAAkAAAAHABgAAAACAAkAAAAHABkAAAACAAkAAAAHABoAAAACAAkAAAAHABsAAAACAAkAAAAHABwAAAACAAkAAAAHAB0AAAACAAkAAAAHAB4AAAACAAkAAAAHAB8AAAACAAkAAAAHACAAAAACAAkAAAAHACEAAAACAAkAAAAHACIAAAACAAkAAAAHACMAAAACAAkAAAAHACQAAAACAAkAAAAHACUAAAACAAkAAAAHACYAAAACAAkAAAAHACcAAAACAAkAAAAHACgAAAACAAkAAAAHACkAAAACAAkAAAAHACoAAAACAAkAAAAHACsAAAACAAkAAAAIAAAAAAACAAkAAAAIAAEAAAACAAkAAAAIAAIAAAACAAkAAAAIAAMAAAACAAkAAAAIAAQAAAACAAkAAAAIAAUAAAACAAkAAAAIAAYAAAACAAkAAAAIAAcAAAACAAkAAAAIAAgAAAACAAkAAAAIAAkAAAACAAkAAAAIAAoAAAACAAkAAAAIAAsAAAACAAkAAAAIAAwAAAACAAkAAAAIAA0AAAACAAkAAAAIAA4AAAACAAkAAAAIAA8AAAACAAkAAAAIABAAAAACAAkAAAAIABEAAAACAAkAAAAIABIAAAACAAkAAAAIABMAAAACAAkAAAAIABQAAAACAAkAAAAIABUAAAACAAkAAAAIABYAAAACAAkAAAAIABcAAAACAAkAAAAIABgAAAACAAkAAAAIABkAAAACAAkAAAAIABoAAAACAAkAAAAIABsAAAACAAkAAAAIABwAAAAAAAQAAAAIAB0AAAACAAkAAAAIAB4AAAACAAkAAAAIAB8AAAACAAkAAAAIACAAAAACAAkAAAAIACEAAAACAAkAAAAIACIAAAACAAkAAAAIACMAAAACAAkAAAAIACQAAAACAAkAAAAIACUAAAACAAkAAAAIACYAAAACAAkAAAAIACcAAAACAAkAAAAIACgAAAACAAkAAAAIACkAAAACAAkAAAAIACoAAAACAAkAAAAIACsAAAACAAkAAAAJAAAAAAACAAkAAAAJAAEAAAACAAkAAAAJAAIAAAACAAkAAAAJAAMAAAACAAkAAAAJAAQAAAACAAkAAAAJAAUAAAACAAkAAAAJAAYAAAACAAkAAAAJAAcAAAACAAkAAAAJAAgAAAAAAAQAAAAJAAkAAAACAAkAAAAJAAoAAAACAAkAAAAJAAsAAAACAAkAAAAJAAwAAAACAAkAAAAJAA0AAAACAAkAAAAJAA4AAAACAAkAAAAJAA8AAAACAAkAAAAJABAAAAACAAkAAAAJABEAAAACAAkAAAAJABIAAAACAAkAAAAJABMAAAACAAkAAAAJABQAAAACAAkAAAAJABUAAAACAAkAAAAJABYAAAACAAkAAAAJABcAAAACAAkAAAAJABgAAAACAAkAAAAJABkAAAACAAkAAAAJABoAAAACAAkAAAAJABsAAAACAAkAAAAJABwAAAACAAkAAAAJAB0AAAACAAkAAAAJAB4AAAACAAkAAAAJAB8AAAACAAkAAAAJACAAAAACAAkAAAAJACEAAAACAAkAAAAJACIAAAACAAkAAAAJACMAAAACAAkAAAAJACQAAAACAAkAAAAJACUAAAACAAkAAAAJACYAAAACAAkAAAAJACcAAAACAAkAAAAJACgAAAACAAkAAAAJACkAAAACAAkAAAAJACoAAAACAAkAAAAJACsAAAACAAkAAAAKAAAAAAACAAkAAAAKAAEAAAACAAkAAAAKAAIAAAACAAkAAAAKAAMAAAAAAAUAAAAKAAQAAAACAAkAAAAKAAUAAAACAAkAAAAKAAYAAAACAAkAAAAKAAcAAAACAAkAAAAKAAgAAAACAAkAAAAKAAkAAAACAAkAAAAKAAoAAAACAAkAAAAKAAsAAAACAAkAAAAKAAwAAAACAAkAAAAKAA0AAAACAAkAAAAKAA4AAAACAAkAAAAKAA8AAAACAAkAAAAKABAAAAACAAkAAAAKABEAAAACAAkAAAAKABIAAAACAAkAAAAKABMAAAACAAkAAAAKABQAAAACAAkAAAAKABUAAAACAAkAAAAKABYAAAACAAkAAAAKABcAAAACAAkAAAAKABgAAAACAAkAAAAKABkAAAACAAkAAAAKABoAAAACAAkAAAAKABsAAAACAAkAAAAKABwAAAACAAkAAAAKAB0AAAACAAkAAAAKAB4AAAACAAkAAAAKAB8AAAACAAkAAAAKACAAAAACAAkAAAAKACEAAAACAAkAAAAKACIAAAACAAkAAAAKACMAAAACAAkAAAAKACQAAAACAAkAAAAKACUAAAACAAkAAAAKACYAAAACAAkAAAAKACcAAAACAAkAAAAKACgAAAACAAkAAAAKACkAAAACAAkAAAAKACoAAAACAAkAAAAKACsAAAACAAkAAAALAAAAAAACAAkAAAALAAEAAAACAAkAAAALAAIAAAACAAkAAAALAAMAAAACAAkAAAALAAQAAAACAAkAAAALAAUAAAACAAkAAAALAAYAAAACAAkAAAALAAcAAAACAAkAAAALAAgAAAACAAkAAAALAAkAAAACAAkAAAALAAoAAAACAAkAAAALAAsAAAACAAkAAAALAAwAAAACAAkAAAALAA0AAAACAAkAAAALAA4AAAACAAkAAAALAA8AAAACAAkAAAALABAAAAACAAkAAAALABEAAAACAAkAAAALABIAAAACAAkAAAALABMAAAACAAkAAAALABQAAAACAAkAAAALABUAAAACAAkAAAALABYAAAACAAkAAAALABcAAAACAAkAAAALABgAAAACAAkAAAALABkAAAACAAkAAAALABoAAAACAAkAAAALABsAAAACAAkAAAALABwAAAACAAkAAAALAB0AAAACAAkAAAALAB4AAAACAAkAAAALAB8AAAACAAkAAAALACAAAAACAAkAAAALACEAAAACAAkAAAALACIAAAACAAkAAAALACMAAAACAAkAAAALACQAAAACAAkAAAALACUAAAACAAkAAAALACYAAAACAAkAAAALACcAAAACAAkAAAALACgAAAACAAkAAAALACkAAAACAAkAAAALACoAAAACAAkAAAALACsAAAACAAkAAAAMAAAAAAACAAkAAAAMAAEAAAACAAkAAAAMAAIAAAACAAkAAAAMAAMAAAACAAkAAAAMAAQAAAACAAkAAAAMAAUAAAACAAkAAAAMAAYAAAACAAkAAAAMAAcAAAACAAkAAAAMAAgAAAACAAkAAAAMAAkAAAACAAkAAAAMAAoAAAACAAkAAAAMAAsAAAACAAkAAAAMAAwAAAACAAkAAAAMAA0AAAACAAkAAAAMAA4AAAACAAkAAAAMAA8AAAACAAkAAAAMABAAAAACAAkAAAAMABEAAAACAAkAAAAMABIAAAACAAkAAAAMABMAAAACAAkAAAAMABQAAAACAAkAAAAMABUAAAACAAkAAAAMABYAAAAAAAUAAAAMABcAAAACAAkAAAAMABgAAAACAAkAAAAMABkAAAACAAkAAAAMABoAAAACAAkAAAAMABsAAAACAAkAAAAMABwAAAACAAkAAAAMAB0AAAACAAkAAAAMAB4AAAACAAkAAAAMAB8AAAACAAkAAAAMACAAAAACAAkAAAAMACEAAAACAAkAAAAMACIAAAACAAkAAAAMACMAAAACAAkAAAAMACQAAAACAAkAAAAMACUAAAACAAkAAAAMACYAAAACAAkAAAAMACcAAAACAAkAAAAMACgAAAACAAkAAAAMACkAAAACAAkAAAAMACoAAAACAAkAAAAMACsAAAACAAkAAAANAAAAAAACAAkAAAANAAEAAAACAAkAAAANAAIAAAACAAkAAAANAAMAAAACAAkAAAANAAQAAAACAAkAAAANAAUAAAACAAkAAAANAAYAAAACAAkAAAANAAcAAAACAAkAAAANAAgAAAACAAkAAAANAAkAAAACAAkAAAANAAoAAAACAAkAAAANAAsAAAACAAkAAAANAAwAAAACAAkAAAANAA0AAAACAAkAAAANAA4AAAACAAkAAAANAA8AAAACAAkAAAANABAAAAACAAkAAAANABEAAAACAAkAAAANABIAAAACAAkAAAANABMAAAACAAkAAAANABQAAAACAAkAAAANABUAAAACAAkAAAANABYAAAACAAkAAAANABcAAAACAAkAAAANABgAAAACAAkAAAANABkAAAACAAkAAAANABoAAAACAAkAAAANABsAAAACAAkAAAANABwAAAACAAkAAAANAB0AAAACAAkAAAANAB4AAAACAAkAAAANAB8AAAACAAkAAAANACAAAAACAAkAAAANACEAAAACAAkAAAANACIAAAACAAkAAAANACMAAAACAAkAAAANACQAAAACAAkAAAANACUAAAACAAkAAAANACYAAAACAAkAAAANACcAAAACAAkAAAANACgAAAACAAkAAAANACkAAAACAAkAAAANACoAAAACAAkAAAANACsAAAACAAkAAAAOAAAAAAACAAkAAAAOAAEAAAACAAkAAAAOAAIAAAACAAkAAAAOAAMAAAACAAkAAAAOAAQAAAACAAkAAAAOAAUAAAACAAkAAAAOAAYAAAACAAkAAAAOAAcAAAACAAkAAAAOAAgAAAACAAkAAAAOAAkAAAACAAkAAAAOAAoAAAACAAkAAAAOAAsAAAACAAkAAAAOAAwAAAACAAkAAAAOAA0AAAACAAkAAAAOAA4AAAACAAkAAAAOAA8AAAACAAkAAAAOABAAAAACAAkAAAAOABEAAAACAAkAAAAOABIAAAACAAkAAAAOABMAAAACAAkAAAAOABQAAAACAAkAAAAOABUAAAACAAkAAAAOABYAAAACAAkAAAAOABcAAAACAAkAAAAOABgAAAACAAkAAAAOABkAAAACAAkAAAAOABoAAAACAAkAAAAOABsAAAACAAkAAAAOABwAAAACAAkAAAAOAB0AAAACAAkAAAAOAB4AAAACAAkAAAAOAB8AAAACAAkAAAAOACAAAAACAAkAAAAOACEAAAACAAkAAAAOACIAAAACAAkAAAAOACMAAAACAAkAAAAOACQAAAACAAkAAAAOACUAAAACAAkAAAAOACYAAAACAAkAAAAOACcAAAACAAkAAAAOACgAAAACAAkAAAAOACkAAAACAAkAAAAOACoAAAACAAkAAAAOACsAAAACAAkAAAAPAAAAAAACAAkAAAAPAAEAAAACAAkAAAAPAAIAAAACAAkAAAAPAAMAAAACAAkAAAAPAAQAAAACAAkAAAAPAAUAAAACAAkAAAAPAAYAAAACAAkAAAAPAAcAAAACAAkAAAAPAAgAAAACAAkAAAAPAAkAAAACAAkAAAAPAAoAAAACAAkAAAAPAAsAAAACAAkAAAAPAAwAAAACAAkAAAAPAA0AAAACAAkAAAAPAA4AAAACAAkAAAAPAA8AAAACAAkAAAAPABAAAAACAAkAAAAPABEAAAACAAkAAAAPABIAAAACAAkAAAAPABMAAAACAAkAAAAPABQAAAACAAkAAAAPABUAAAACAAkAAAAPABYAAAACAAkAAAAPABcAAAACAAkAAAAPABgAAAACAAkAAAAPABkAAAACAAkAAAAPABoAAAACAAkAAAAPABsAAAACAAkAAAAPABwAAAACAAkAAAAPAB0AAAACAAkAAAAPAB4AAAACAAkAAAAPAB8AAAACAAkAAAAPACAAAAACAAkAAAAPACEAAAACAAkAAAAPACIAAAACAAkAAAAPACMAAAACAAkAAAAPACQAAAACAAkAAAAPACUAAAACAAkAAAAPACYAAAACAAkAAAAPACcAAAACAAkAAAAPACgAAAACAAkAAAAPACkAAAACAAkAAAAPACoAAAACAAkAAAAPACsAAAACAAkAAAAQAAAAAAACAAkAAAAQAAEAAAACAAkAAAAQAAIAAAACAAkAAAAQAAMAAAACAAkAAAAQAAQAAAACAAkAAAAQAAUAAAACAAkAAAAQAAYAAAACAAkAAAAQAAcAAAACAAkAAAAQAAgAAAACAAkAAAAQAAkAAAACAAkAAAAQAAoAAAACAAkAAAAQAAsAAAACAAkAAAAQAAwAAAACAAkAAAAQAA0AAAACAAkAAAAQAA4AAAACAAkAAAAQAA8AAAACAAkAAAAQABAAAAACAAkAAAAQABEAAAACAAkAAAAQABIAAAACAAkAAAAQABMAAAACAAkAAAAQABQAAAACAAkAAAAQABUAAAACAAkAAAAQABYAAAACAAkAAAAQABcAAAACAAkAAAAQABgAAAACAAkAAAAQABkAAAACAAkAAAAQABoAAAACAAkAAAAQABsAAAACAAkAAAAQABwAAAACAAkAAAAQAB0AAAACAAkAAAAQAB4AAAACAAkAAAAQAB8AAAACAAkAAAAQACAAAAACAAkAAAAQACEAAAACAAkAAAAQACIAAAACAAkAAAAQACMAAAACAAkAAAAQACQAAAACAAkAAAAQACUAAAACAAkAAAAQACYAAAACAAkAAAAQACcAAAACAAkAAAAQACgAAAACAAkAAAAQACkAAAACAAkAAAAQACoAAAACAAkAAAAQACsAAAACAAkAAAARAAAAAAACAAkAAAARAAEAAAACAAkAAAARAAIAAAACAAkAAAARAAMAAAACAAkAAAARAAQAAAACAAkAAAARAAUAAAACAAkAAAARAAYAAAACAAkAAAARAAcAAAAAAAQAAAARAAgAAAACAAkAAAARAAkAAAACAAkAAAARAAoAAAACAAkAAAARAAsAAAACAAkAAAARAAwAAAACAAkAAAARAA0AAAACAAkAAAARAA4AAAACAAkAAAARAA8AAAACAAkAAAARABAAAAACAAkAAAARABEAAAACAAkAAAARABIAAAACAAkAAAARABMAAAACAAkAAAARABQAAAACAAkAAAARABUAAAACAAkAAAARABYAAAACAAkAAAARABcAAAACAAkAAAARABgAAAACAAkAAAARABkAAAACAAkAAAARABoAAAACAAkAAAARABsAAAACAAkAAAARABwAAAACAAkAAAARAB0AAAACAAkAAAARAB4AAAACAAkAAAARAB8AAAACAAkAAAARACAAAAACAAkAAAARACEAAAACAAkAAAARACIAAAACAAkAAAARACMAAAACAAkAAAARACQAAAACAAkAAAARACUAAAACAAkAAAARACYAAAACAAkAAAARACcAAAACAAkAAAARACgAAAACAAkAAAARACkAAAACAAkAAAARACoAAAACAAkAAAARACsAAAACAAkAAAASAAAAAAACAAkAAAASAAEAAAACAAkAAAASAAIAAAACAAkAAAASAAMAAAACAAkAAAASAAQAAAACAAkAAAASAAUAAAACAAkAAAASAAYAAAACAAkAAAASAAcAAAACAAkAAAASAAgAAAACAAkAAAASAAkAAAACAAkAAAASAAoAAAACAAkAAAASAAsAAAACAAkAAAASAAwAAAACAAkAAAASAA0AAAACAAkAAAASAA4AAAACAAkAAAASAA8AAAACAAkAAAASABAAAAACAAkAAAASABEAAAACAAkAAAASABIAAAACAAkAAAASABMAAAACAAkAAAASABQAAAACAAkAAAASABUAAAACAAkAAAASABYAAAACAAkAAAASABcAAAACAAkAAAASABgAAAACAAkAAAASABkAAAACAAkAAAASABoAAAACAAkAAAASABsAAAACAAkAAAASABwAAAACAAkAAAASAB0AAAACAAkAAAASAB4AAAACAAkAAAASAB8AAAACAAkAAAASACAAAAACAAkAAAASACEAAAACAAkAAAASACIAAAACAAkAAAASACMAAAACAAkAAAASACQAAAACAAkAAAASACUAAAACAAkAAAASACYAAAACAAkAAAASACcAAAACAAkAAAASACgAAAACAAkAAAASACkAAAACAAkAAAASACoAAAACAAkAAAASACsAAAACAAkAAAATAAAAAAACAAkAAAATAAEAAAACAAkAAAATAAIAAAACAAkAAAATAAMAAAACAAkAAAATAAQAAAACAAkAAAATAAUAAAACAAkAAAATAAYAAAACAAkAAAATAAcAAAACAAkAAAATAAgAAAACAAkAAAATAAkAAAACAAkAAAATAAoAAAACAAkAAAATAAsAAAACAAkAAAATAAwAAAACAAkAAAATAA0AAAACAAkAAAATAA4AAAACAAkAAAATAA8AAAACAAkAAAATABAAAAACAAkAAAATABEAAAACAAkAAAATABIAAAACAAkAAAATABMAAAACAAkAAAATABQAAAACAAkAAAATABUAAAACAAkAAAATABYAAAACAAkAAAATABcAAAACAAkAAAATABgAAAACAAkAAAATABkAAAACAAkAAAATABoAAAACAAkAAAATABsAAAACAAkAAAATABwAAAACAAkAAAATAB0AAAACAAkAAAATAB4AAAACAAkAAAATAB8AAAACAAkAAAATACAAAAACAAkAAAATACEAAAACAAkAAAATACIAAAACAAkAAAATACMAAAACAAkAAAATACQAAAAAAAUAAAATACUAAAACAAkAAAATACYAAAACAAkAAAATACcAAAACAAkAAAATACgAAAACAAkAAAATACkAAAACAAkAAAATACoAAAACAAkAAAATACsAAAACAAkAAAAUAAAAAAACAAkAAAAUAAEAAAACAAkAAAAUAAIAAAACAAkAAAAUAAMAAAACAAkAAAAUAAQAAAACAAkAAAAUAAUAAAACAAkAAAAUAAYAAAACAAkAAAAUAAcAAAACAAkAAAAUAAgAAAACAAkAAAAUAAkAAAACAAkAAAAUAAoAAAACAAkAAAAUAAsAAAACAAkAAAAUAAwAAAACAAkAAAAUAA0AAAACAAkAAAAUAA4AAAACAAkAAAAUAA8AAAACAAkAAAAUABAAAAACAAkAAAAUABEAAAACAAkAAAAUABIAAAACAAkAAAAUABMAAAACAAkAAAAUABQAAAACAAkAAAAUABUAAAACAAkAAAAUABYAAAACAAkAAAAUABcAAAACAAkAAAAUABgAAAACAAkAAAAUABkAAAACAAkAAAAUABoAAAACAAkAAAAUABsAAAACAAkAAAAUABwAAAACAAkAAAAUAB0AAAACAAkAAAAUAB4AAAACAAkAAAAUAB8AAAACAAkAAAAUACAAAAACAAkAAAAUACEAAAACAAkAAAAUACIAAAACAAkAAAAUACMAAAACAAkAAAAUACQAAAACAAkAAAAUACUAAAACAAkAAAAUACYAAAACAAkAAAAUACcAAAACAAkAAAAUACgAAAACAAkAAAAUACkAAAACAAkAAAAUACoAAAACAAkAAAAUACsAAAACAAkAAAAVAAAAAAACAAkAAAAVAAEAAAACAAkAAAAVAAIAAAACAAkAAAAVAAMAAAACAAkAAAAVAAQAAAACAAkAAAAVAAUAAAACAAkAAAAVAAYAAAACAAkAAAAVAAcAAAACAAkAAAAVAAgAAAACAAkAAAAVAAkAAAACAAkAAAAVAAoAAAACAAkAAAAVAAsAAAACAAkAAAAVAAwAAAACAAkAAAAVAA0AAAACAAkAAAAVAA4AAAACAAkAAAAVAA8AAAACAAkAAAAVABAAAAACAAkAAAAVABEAAAACAAkAAAAVABIAAAAAAAQAAAAVABMAAAACAAkAAAAVABQAAAACAAkAAAAVABUAAAACAAkAAAAVABYAAAACAAkAAAAVABcAAAACAAkAAAAVABgAAAACAAkAAAAVABkAAAACAAkAAAAVABoAAAACAAkAAAAVABsAAAACAAkAAAAVABwAAAACAAkAAAAVAB0AAAACAAkAAAAVAB4AAAAAAAQAAAAVAB8AAAACAAkAAAAVACAAAAACAAkAAAAVACEAAAACAAkAAAAVACIAAAACAAkAAAAVACMAAAACAAkAAAAVACQAAAACAAkAAAAVACUAAAACAAkAAAAVACYAAAACAAkAAAAVACcAAAACAAkAAAAVACgAAAACAAkAAAAVACkAAAACAAkAAAAVACoAAAACAAkAAAAVACsAAAACAAkAAAAWAAAAAAACAAkAAAAWAAEAAAACAAkAAAAWAAIAAAACAAkAAAAWAAMAAAACAAkAAAAWAAQAAAACAAkAAAAWAAUAAAACAAkAAAAWAAYAAAACAAkAAAAWAAcAAAACAAkAAAAWAAgAAAACAAkAAAAWAAkAAAACAAkAAAAWAAoAAAACAAkAAAAWAAsAAAACAAkAAAAWAAwAAAACAAkAAAAWAA0AAAACAAkAAAAWAA4AAAACAAkAAAAWAA8AAAACAAkAAAAWABAAAAACAAkAAAAWABEAAAACAAkAAAAWABIAAAACAAkAAAAWABMAAAACAAkAAAAWABQAAAACAAkAAAAWABUAAAACAAkAAAAWABYAAAACAAkAAAAWABcAAAACAAkAAAAWABgAAAACAAkAAAAWABkAAAACAAkAAAAWABoAAAACAAkAAAAWABsAAAACAAkAAAAWABwAAAACAAkAAAAWAB0AAAACAAkAAAAWAB4AAAACAAkAAAAWAB8AAAACAAkAAAAWACAAAAACAAkAAAAWACEAAAACAAkAAAAWACIAAAACAAkAAAAWACMAAAACAAkAAAAWACQAAAACAAkAAAAWACUAAAACAAkAAAAWACYAAAACAAkAAAAWACcAAAACAAkAAAAWACgAAAACAAkAAAAWACkAAAACAAkAAAAWACoAAAACAAkAAAAWACsAAAACAAkAAAAXAAAAAAACAAkAAAAXAAEAAAACAAkAAAAXAAIAAAACAAkAAAAXAAMAAAACAAkAAAAXAAQAAAACAAkAAAAXAAUAAAACAAkAAAAXAAYAAAACAAkAAAAXAAcAAAACAAkAAAAXAAgAAAACAAkAAAAXAAkAAAACAAkAAAAXAAoAAAACAAkAAAAXAAsAAAACAAkAAAAXAAwAAAACAAkAAAAXAA0AAAACAAkAAAAXAA4AAAACAAkAAAAXAA8AAAACAAkAAAAXABAAAAACAAkAAAAXABEAAAACAAkAAAAXABIAAAACAAkAAAAXABMAAAACAAkAAAAXABQAAAACAAkAAAAXABUAAAACAAkAAAAXABYAAAACAAkAAAAXABcAAAACAAkAAAAXABgAAAACAAkAAAAXABkAAAACAAkAAAAXABoAAAACAAkAAAAXABsAAAACAAkAAAAXABwAAAACAAkAAAAXAB0AAAACAAkAAAAXAB4AAAACAAkAAAAXAB8AAAACAAkAAAAXACAAAAACAAkAAAAXACEAAAACAAkAAAAXACIAAAACAAkAAAAXACMAAAACAAkAAAAXACQAAAACAAkAAAAXACUAAAACAAkAAAAXACYAAAACAAkAAAAXACcAAAACAAkAAAAXACgAAAACAAkAAAAXACkAAAACAAkAAAAXACoAAAACAAkAAAAXACsAAAACAAkAAAAYAAAAAAACAAkAAAAYAAEAAAACAAkAAAAYAAIAAAACAAkAAAAYAAMAAAACAAkAAAAYAAQAAAAAAAQAAAAYAAUAAAACAAkAAAAYAAYAAAACAAkAAAAYAAcAAAACAAkAAAAYAAgAAAACAAkAAAAYAAkAAAACAAkAAAAYAAoAAAACAAkAAAAYAAsAAAACAAkAAAAYAAwAAAACAAkAAAAYAA0AAAACAAkAAAAYAA4AAAACAAkAAAAYAA8AAAACAAkAAAAYABAAAAACAAkAAAAYABEAAAACAAkAAAAYABIAAAACAAkAAAAYABMAAAACAAkAAAAYABQAAAACAAkAAAAYABUAAAACAAkAAAAYABYAAAACAAkAAAAYABcAAAACAAkAAAAYABgAAAACAAkAAAAYABkAAAACAAkAAAAYABoAAAACAAkAAAAYABsAAAACAAkAAAAYABwAAAACAAkAAAAYAB0AAAACAAkAAAAYAB4AAAACAAkAAAAYAB8AAAACAAkAAAAYACAAAAACAAkAAAAYACEAAAACAAkAAAAYACIAAAACAAkAAAAYACMAAAACAAkAAAAYACQAAAACAAkAAAAYACUAAAACAAkAAAAYACYAAAACAAkAAAAYACcAAAAAAAQAAAAYACgAAAACAAkAAAAYACkAAAACAAkAAAAYACoAAAACAAkAAAAYACsAAAACAAkAAAAZAAAAAAACAAkAAAAZAAEAAAACAAkAAAAZAAIAAAACAAkAAAAZAAMAAAACAAkAAAAZAAQAAAACAAkAAAAZAAUAAAACAAkAAAAZAAYAAAACAAkAAAAZAAcAAAACAAkAAAAZAAgAAAACAAkAAAAZAAkAAAACAAkAAAAZAAoAAAACAAkAAAAZAAsAAAAAAAUAAAAZAAwAAAACAAkAAAAZAA0AAAACAAkAAAAZAA4AAAACAAkAAAAZAA8AAAACAAkAAAAZABAAAAACAAkAAAAZABEAAAACAAkAAAAZABIAAAACAAkAAAAZABMAAAACAAkAAAAZABQAAAACAAkAAAAZABUAAAACAAkAAAAZABYAAAACAAkAAAAZABcAAAACAAkAAAAZABgAAAACAAkAAAAZABkAAAACAAkAAAAZABoAAAACAAkAAAAZABsAAAACAAkAAAAZABwAAAACAAkAAAAZAB0AAAACAAkAAAAZAB4AAAACAAkAAAAZAB8AAAACAAkAAAAZACAAAAACAAkAAAAZACEAAAACAAkAAAAZACIAAAACAAkAAAAZACMAAAACAAkAAAAZACQAAAACAAkAAAAZACUAAAACAAkAAAAZACYAAAACAAkAAAAZACcAAAACAAkAAAAZACgAAAACAAkAAAAZACkAAAACAAkAAAAZACoAAAACAAkAAAAZACsAAAACAAkAAAAaAAAAAAACAAkAAAAaAAEAAAACAAkAAAAaAAIAAAACAAkAAAAaAAMAAAACAAkAAAAaAAQAAAACAAkAAAAaAAUAAAACAAkAAAAaAAYAAAACAAkAAAAaAAcAAAACAAkAAAAaAAgAAAACAAkAAAAaAAkAAAACAAkAAAAaAAoAAAACAAkAAAAaAAsAAAACAAkAAAAaAAwAAAACAAkAAAAaAA0AAAACAAkAAAAaAA4AAAACAAkAAAAaAA8AAAACAAkAAAAaABAAAAACAAkAAAAaABEAAAACAAkAAAAaABIAAAACAAkAAAAaABMAAAACAAkAAAAaABQAAAACAAkAAAAaABUAAAACAAkAAAAaABYAAAACAAkAAAAaABcAAAACAAkAAAAaABgAAAACAAkAAAAaABkAAAACAAkAAAAaABoAAAACAAkAAAAaABsAAAACAAkAAAAaABwAAAACAAkAAAAaAB0AAAACAAkAAAAaAB4AAAACAAkAAAAaAB8AAAACAAkAAAAaACAAAAACAAkAAAAaACEAAAACAAkAAAAaACIAAAACAAkAAAAaACMAAAACAAkAAAAaACQAAAACAAkAAAAaACUAAAACAAkAAAAaACYAAAACAAkAAAAaACcAAAACAAkAAAAaACgAAAACAAkAAAAaACkAAAACAAkAAAAaACoAAAACAAkAAAAaACsAAAACAAkAAAAbAAAAAAACAAkAAAAbAAEAAAACAAkAAAAbAAIAAAACAAkAAAAbAAMAAAACAAkAAAAbAAQAAAACAAkAAAAbAAUAAAACAAkAAAAbAAYAAAACAAkAAAAbAAcAAAACAAkAAAAbAAgAAAACAAkAAAAbAAkAAAACAAkAAAAbAAoAAAACAAkAAAAbAAsAAAACAAkAAAAbAAwAAAACAAkAAAAbAA0AAAACAAkAAAAbAA4AAAACAAkAAAAbAA8AAAACAAkAAAAbABAAAAACAAkAAAAbABEAAAACAAkAAAAbABIAAAACAAkAAAAbABMAAAACAAkAAAAbABQAAAACAAkAAAAbABUAAAACAAkAAAAbABYAAAACAAkAAAAbABcAAAACAAkAAAAbABgAAAACAAkAAAAbABkAAAACAAkAAAAbABoAAAACAAkAAAAbABsAAAACAAkAAAAbABwAAAACAAkAAAAbAB0AAAACAAkAAAAbAB4AAAAAAAUAAAAbAB8AAAACAAkAAAAbACAAAAACAAkAAAAbACEAAAACAAkAAAAbACIAAAACAAkAAAAbACMAAAACAAkAAAAbACQAAAACAAkAAAAbACUAAAACAAkAAAAbACYAAAACAAkAAAAbACcAAAACAAkAAAAbACgAAAACAAkAAAAbACkAAAACAAkAAAAbACoAAAACAAkAAAAbACsAAAACAAkAAAAAACwAAAACAAkAAAABACwAAAACAAkAAAACACwAAAACAAkAAAADACwAAAACAAkAAAAEACwAAAACAAkAAAAFACwAAAACAAkAAAAGACwAAAACAAkAAAAHACwAAAACAAkAAAAIACwAAAACAAkAAAAJACwAAAACAAkAAAAKACwAAAACAAkAAAALACwAAAACAAkAAAAMACwAAAACAAkAAAANACwAAAACAAkAAAAOACwAAAACAAkAAAAPACwAAAACAAkAAAAQACwAAAACAAkAAAARACwAAAACAAkAAAASACwAAAACAAkAAAATACwAAAACAAkAAAAUACwAAAACAAkAAAAVACwAAAACAAkAAAAWACwAAAACAAkAAAAXACwAAAACAAkAAAAYACwAAAACAAkAAAAZACwAAAACAAkAAAAaACwAAAACAAkAAAAbACwAAAACAAkAAAAcAAAAAAACAAkAAAAcAAEAAAACAAkAAAAcAAIAAAACAAkAAAAcAAMAAAACAAkAAAAcAAQAAAACAAkAAAAdAAAAAAACAAkAAAAdAAEAAAACAAkAAAAdAAIAAAACAAkAAAAdAAMAAAACAAkAAAAdAAQAAAACAAkAAAAcAAUAAAACAAkAAAAcAAYAAAACAAkAAAAcAAcAAAACAAkAAAAcAAgAAAACAAkAAAAcAAkAAAACAAkAAAAcAAoAAAACAAkAAAAcAAsAAAACAAkAAAAcAAwAAAACAAkAAAAcAA0AAAACAAkAAAAcAA4AAAACAAkAAAAcAA8AAAACAAkAAAAcABAAAAACAAkAAAAcABEAAAACAAkAAAAcABIAAAACAAkAAAAcABMAAAACAAkAAAAcABQAAAACAAkAAAAcABUAAAACAAkAAAAcABYAAAACAAkAAAAcABcAAAACAAkAAAAcABgAAAACAAkAAAAcABkAAAACAAkAAAAcABoAAAACAAkAAAAcABsAAAACAAkAAAAcABwAAAACAAkAAAAcAB0AAAACAAkAAAAcAB4AAAACAAkAAAAcAB8AAAACAAkAAAAcACAAAAACAAkAAAAdAAUAAAACAAkAAAAdAAYAAAACAAkAAAAdAAcAAAACAAkAAAAdAAgAAAACAAkAAAAdAAkAAAACAAkAAAAdAAoAAAACAAkAAAAdAAsAAAACAAkAAAAdAAwAAAACAAkAAAAdAA0AAAACAAkAAAAdAA4AAAACAAkAAAAdAA8AAAACAAkAAAAdABAAAAACAAkAAAAdABEAAAACAAkAAAAdABIAAAACAAkAAAAdABMAAAACAAkAAAAdABQAAAACAAkAAAAdABUAAAACAAkAAAAdABYAAAACAAkAAAAdABcAAAACAAkAAAAdABgAAAACAAkAAAAdABkAAAACAAkAAAAdABoAAAACAAkAAAAdABsAAAACAAkAAAAdABwAAAACAAkAAAAdAB0AAAACAAkAAAAdAB4AAAACAAkAAAAdAB8AAAACAAkAAAAdACAAAAACAAkAAAAcACEAAAACAAkAAAAcACIAAAACAAkAAAAcACMAAAACAAkAAAAcACQAAAACAAkAAAAcACUAAAACAAkAAAAcACYAAAACAAkAAAAcACcAAAACAAkAAAAcACgAAAACAAkAAAAcACkAAAACAAkAAAAcACoAAAACAAkAAAAcACsAAAACAAkAAAAcACwAAAACAAkAAAAdACEAAAACAAkAAAAdACIAAAACAAkAAAAdACMAAAACAAkAAAAdACQAAAACAAkAAAAdACUAAAACAAkAAAAdACYAAAACAAkAAAAdACcAAAACAAkAAAAdACgAAAACAAkAAAAdACkAAAACAAkAAAAdACoAAAACAAkAAAAdACsAAAACAAkAAAAdACwAAAACAAkAAAA=")
tile_set = SubResource("TileSet_iywne")

[node name="EnemyNode" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_gee14")
volume_db = -5.0
autoplay = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
